syntax = "proto3";

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/connman";

import "google/protobuf/timestamp.proto";
import "cloud/dataplatform/api/connman/common.proto";
import "cloud/dataplatform/api/connman/mysql.proto";
import "cloud/dataplatform/api/connman/postgresql.proto";
import "cloud/dataplatform/api/connman/mongodb.proto";
import "cloud/dataplatform/api/connman/kafka.proto";
import "cloud/dataplatform/api/connman/clickhouse.proto";
import "cloud/dataplatform/api/connman/redis.proto";

package yandex.cloud.priv.connman.v1;

message ConnectionParams {
    oneof type {
        PostgreSQLConnection postgresql = 1;
        MySQLConnection mysql = 2;
        MongoDBConnection mongodb = 3;
        ClickHouseConnection clickhouse = 4;
        KafkaConnection kafka = 5;
        RedisConnection redis = 6;
    }
}

message Connection {
    string id = 1;
    string folder_id = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    string name = 5;
    string description = 6;
    map<string, string> labels = 7;
    string created_by = 8;
    ConnectionParams params = 9;
}
